Route fixes and profile

--- a/public/css/rr-style.css
+++ b/public/css/rr-style.css
@@ -12,6 +12,7 @@
         -moz-border-radius:6px;
         border-radius:6px;
         background:#fff;
+        font-size: 0.9em;
     }
 
 table.feature-table thead tr {
