Fix format of auction pages

--- a/public/css/main-stylesheet.css
+++ b/public/css/main-stylesheet.css
@@ -5242,7 +5242,7 @@ blockquote {
 	display: block;
 	position: relative;
 	margin-bottom: 15px;
-	background: #256193;
+	background: #1C394A;
 	color: #fff;
 	padding: 17px 20px;
 	text-shadow: none;
