--- a/public/css/main-stylesheet.css
+++ b/public/css/main-stylesheet.css
@@ -8553,7 +8553,10 @@ body::-webkit-scrollbar-corner {
 
 .game-info-right .game-menu ul li {
 	display: block;
+	background-color: inherit;
 	float: left;
+	padding: 15px 20px;
+	box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), inset 0 65px 40px -40px rgba(255,255,255,0.14);
 }
 
 .game-info-right .game-menu ul li a {
