--- a/public/css/rr-style.css
+++ b/public/css/rr-style.css
@@ -508,8 +508,15 @@ h5.title a:hover {
     background: #5d1d1e;
 }
 
-.content-padding h3, .content-padding h4 {
-    color: #5d1d1e;
+.content-padding h3 {
+    color: #8f4f4f;
+    border-bottom: 1px solid #6e2e2f;
+
+}
+
+.content-padding h4 {
+    color: #6e2e2f;
+    border-bottom: 1px solid #6e2e2f;
 }
 
 ul li {
@@ -851,6 +858,7 @@ h5.title a {
     width: 100%;
     height: 2em;
     border-radius: 0 !important;
+    font-family: 'Oswald';
 }
 
 #main .league-item p {
