Fix minor errors and clear out rosters

--- a/public/css/rr-style.css
+++ b/public/css/rr-style.css
@@ -871,7 +871,7 @@ h5.title a {
 }
 
 .game-info-left img.game-poster {
-    max-height: 220px !important;
+    /* max-height: 220px !important; */
     max-width: 220px !important;
 }
 
