--- a/public/css/rr-style.css
+++ b/public/css/rr-style.css
@@ -251,6 +251,14 @@ table.feature-table thead tr {
         font-weight: 100;
         font-size: 1.667em;
     }
+
+    /*HR*/
+    hr {
+        margin: 0;
+        margin-left: 5%;
+        width: 89.5%;
+        border: 1px solid #9c9c9c;
+    }
     
     /*  Small package */
     
@@ -673,6 +681,7 @@ table.feature-table tbody td.bid--placed {
 .table-row {
     clear: both;
     border-bottom: 1px dotted #9c9c9c;
+    
     overflow: hidden;
 }
 
