--- a/public/css/main-stylesheet.css
+++ b/public/css/main-stylesheet.css
@@ -1194,6 +1194,12 @@ div.content-padding {
 	margin-bottom: 15px;
 }
 
+.border {
+    border-top: 2px solid #9c9c9c;
+    width: 90.2%;
+    margin-left: 14px;
+}
+
 div.content-padding:after {
 	clear: both;
 	content: '';
@@ -8407,7 +8413,11 @@ body::-webkit-scrollbar-corner {
 	position: relative;
 }
 
-
+.rules3 {
+	font-family: "Oswald", sans-serif;
+    text-transform: uppercase;
+    color: #777777;
+}
 
 
 
@@ -8490,6 +8500,7 @@ body::-webkit-scrollbar-corner {
 .game-info-right .game-overlay-info {
 	display: block;
 	padding: 24px 20px;
+	padding-left: 2px;
 }
 
 .game-info-right .game-overlay-info > h1 {
@@ -8618,6 +8629,9 @@ a.defbutton {
 .game-info-graph {
 	display: block;
 	margin-bottom: 20px;
+	background-color: #232323;
+	padding-left: 13px;
+	padding-bottom: 10px;
 }
 
 .game-info-graph > div {
@@ -8653,9 +8667,9 @@ a.defbutton {
 	color: #fff;
 	text-align: center;
 	padding: 10px;
-	margin-bottom: 15px;
 	border-radius: 3px;
 	-moz-border-radius: 3px;
+	padding-left: 0;
 }
 
 .game-info-rating a {
