--- a/public/css/rr-style.css
+++ b/public/css/rr-style.css
@@ -1113,12 +1113,21 @@ i, #submit {
 }
 
 .table-row.public, .table-row.private {
-  padding: .3em 1em;
-  font-size: .9em;
+    padding: .3em 1em;
+    font-size: .9em;
+    margin-left: 5%;
+    padding-left: 3px;
+    padding-right: 0;
+    margin-right: 5%;
 }
 
 .league-right-inner .table-row:last-of-type {
     border-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    width: 89%;
+    position: relative;
+    left: 1%;
 }
 
 .promo-hero {
