Updated to SSL for links

--- a/public/css/rr-style.css
+++ b/public/css/rr-style.css
@@ -1523,6 +1523,10 @@ table.feature-table tbody td {
     }  
 }
 
+#featured-img-1 {
+    background-size: contain !important;
+}
+
 
 
 /* Phone */
